--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         </section>
         <footer class="links">
           <!-- Github URL -->
-          <div>
-            <!-- <label>Github URL</label> -->
-            <p id="link" data-testid="githubURL">Link</p>
-          </div>
+          <a target="_blank" href="" id="link" data-testid="githubURL"
+            >Github Link</a
+          >
         </footer>
       </main>
     </main>
