--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img
             data-testid="slackDisplayImage"
             src="./assets/WhatsApp Image 2023-08-29 at 14.38.48.jpg"
-            alt="Bug"
+            alt="just code it"
           />
         </div>
       </main>
@@ -32,7 +32,7 @@
           </div>
           <!-- Current UTC Time -->
           <div class="detail">
-            <label>Current UTC time(ms)</label>
+            <label>UTC time(ms)</label>
             <p id="time" data-testid="currentUTCTime">00:00</p>
           </div>
           <!-- Current Track-->
