--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img
             data-testid="slackDisplayImage"
             src="./assets/WhatsApp Image 2023-08-29 at 14.38.48.jpg"
-            alt="just code it"
+            alt="Just code it"
           />
         </div>
       </main>
