--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <!-- slack username -->
           <div class="detail">
             <label>Slack Name</label>
-            <p id="name" data-testid="slackUserName">Bug</p>
+            <p id="name" data-testid="slackUserName">Just code it</p>
           </div>
           <!-- Day of the week -->
           <div class="detail">
